@@ -53,6 +53,7 @@ enum
 
     STATUS_NEED_PASSPHRASE,
     STATUS_VALIDSIG,
+    STATUS_ASSERT_SIGNER,
     STATUS_SIG_ID,
     STATUS_ENC_TO,
     STATUS_NODATA,
