@@ -611,3 +611,12 @@ do_test (int argc, char *argv[])
 
   xfree (filename);
 }
+
+int assert_signer_true = 0;
+
+void
+check_assert_signer_list (const char *mainpkhex, const char *pkhex)
+{
+  (void)mainpkhex;
+  (void)pkhex;
+}
